; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_notes.c_remove_note_in_tree_enotfound_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_notes.c_remove_note_in_tree_enotfound_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_REPOSITORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"object '%s' has no note\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32*, i32*, i32*, i8*, i32, i32)* @remove_note_in_tree_enotfound_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_note_in_tree_enotfound_cb(i32** %0, i32* %1, i32* %2, i32* %3, i8* %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32** %0, i32*** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i8* %4, i8** %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load i32**, i32*** %8, align 8
  %16 = ptrtoint i32** %15 to i32
  %17 = call i32 @GIT_UNUSED(i32 %16)
  %18 = load i32*, i32** %9, align 8
  %19 = ptrtoint i32* %18 to i32
  %20 = call i32 @GIT_UNUSED(i32 %19)
  %21 = load i32*, i32** %10, align 8
  %22 = ptrtoint i32* %21 to i32
  %23 = call i32 @GIT_UNUSED(i32 %22)
  %24 = load i32*, i32** %11, align 8
  %25 = ptrtoint i32* %24 to i32
  %26 = call i32 @GIT_UNUSED(i32 %25)
  %27 = load i32, i32* %13, align 4
  %28 = call i32 @GIT_UNUSED(i32 %27)
  %29 = load i32, i32* @GIT_ERROR_REPOSITORY, align 4
  %30 = load i8*, i8** %12, align 8
  %31 = call i32 @git_error_set(i32 %29, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* %30)
  %32 = load i32, i32* %14, align 4
  ret i32 %32
}

declare dso_local i32 @GIT_UNUSED(i32) #1

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
